--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "~8.10.22",
     "esparse": "^0.5.0",
     "jest": "^23.4.2",
-    "nodemon": "^1.18.11",
+    "nodemon": "^1.19.4",
     "rimraf": "~2.6.2",
     "ts-jest": "~23.0.1",
     "tslint": "~5.11.0",
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "ejs": "^3.1.6",
     "express": "^4.16.4",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
